...
        <item>Any</item>
        <item>African</item>
        <item>American</item>
        <item>Brazilian</item>
        <item>British</item>
        <item>Caribbean</item>
        <item>Chinese</item>
        <item>Ethiopian</item>
        <item>Filipino</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Hawaiian</item>
...
